# cpp-backend-boilerplate

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPP_Backend_boilerplate.sln  LICENSE  Makefile  README.md  cmake_install.cmake  cpp-backend-boilerplate.cbp  dependencies.txt
CPP_Backend_boilerplate/: Assets.cpp  Assets.hpp  CLogger.cpp  CLogger.hpp  CPP_Backend_boilerplate.vcxproj  CPP_Backend_boilerplate.vcxproj.filters  Logger.cpp  Logger.hpp  Parser.cpp  Parser.hpp  REST_Request.cpp  REST_Response.cpp  REST_functions.cpp  RestDirCollector.cpp  RestDirCollector.hpp  RestManager.hpp  SocketCollector.cpp  SocketCollector.hpp  SocketManager.hpp  dependencies.txt  global_preferences.h  http_code.hpp  main.cpp  stdafx.h  targetver.h  testdir.cpp  todo.txt
src/: Assets.cpp  Assets.hpp  CLogger.cpp  CLogger.hpp  GlobalPrefences.hpp  Parser.hpp  REST_Request.cpp  REST_functions.cpp  RestDirCollector.cpp  RestManager.hpp  SocketCollector.cpp  SocketManager.hpp  dependencies.txt  global_preferences.h  http_code.hpp  main.cpp  models.hpp  restbed.hpp  service_error.hpp  stdafx.h  testdir.cpp  todo.txt
src/core/rest/: REST_Request.cpp  REST_Response.cpp  REST_functions.cpp  RestDirCollector.cpp
src/core/socket/: SOCKET_Request.cpp  SOCKET_Response.cpp  SocketCollector.cpp
src/core/util/: Assets.cpp  CLogger.cpp  Encrypt.cpp  Jwt.cpp  Parser.cpp  service_error.cpp
src/exec/: testSocket.cpp  testdir.cpp
src/util/: Assets.cpp  CLogger.cpp  Parser.cpp  service_error.cpp
